--- a/Dev/View/index.html
+++ b/Dev/View/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
-<body onload="setQuiz()">
+<body>
 
     <header>
         <h1>Big quiz game for quiz enjoyers who like quizzes with friends!</h1>
@@ -21,18 +21,20 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title text-center" id="quizHeader">The quiz to play with friends</h4>
-                        <div id="questionBody">
-                            <h5 id="question">question here</h5>
-                            <div id="answers"></div>
-                            <div id="leaderboard">
-                                <table id="scoreboard">
-                                    <tr>
-                                        <th>Player</th>
-                                        <th>Score</th>
-                                    </tr>
-                                </table>
+                        <h4 class="card-title text-center">Add Players (up to 4)</h4>
+                        <form id="playerForm">
+                            <div class="form-group">
+                                <label for="playerName">Player Name</label>
+                                <input type="text" class="form-control" id="playerName" placeholder="Enter player name">
                             </div>
+                            <div class="text-center">
+                                <button type="button" class="btn btn-sm btn-danger" onclick="addPlayer()">Add
+                                    Player</button>
+                            </div>
+                        </form>
+                        <div id="playerList"></div>
+                        <div class="d-flex justify-content-center">
+                            <button class="btn btn-success" onclick="playGame()">Play Game</button>
                         </div>
                     </div>
                 </div>
@@ -43,8 +45,8 @@
     <footer>
         <p>Questions from Open Trivia Database</p>
     </footer>
-    <script src="getQuestions.js"></script>
-    <script src="addPlayers.js"></script>
+    <script src="../Control/getQuestions.js"></script>
+    <script src="../Control/addPlayers.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
