--- a/Dev/View/quiz.html
+++ b/Dev/View/quiz.html
@@ -20,8 +20,10 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-header">
                         <h4 class="card-title text-center" id="quizHeader">The quiz to play with friends</h4>
+                    </div>
+                    <div class="card-body">
                         <div id="questionBody">
                             <h5 id="question">question here</h5>
                             <div id="answers"></div>
