--- a/Dev/View/index.html
+++ b/Dev/View/index.html
@@ -8,9 +8,10 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="displayPlayersTab()">
 
     <header>
         <h1>Big quiz game for quiz enjoyers who like quizzes with friends!</h1>
@@ -20,43 +21,96 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card">
-                    <div class="card-header">
-                        <h4 class="card-title text-center">Add Players (up to 4)</h4>
-                    </div>
-                    <div class="card-body">
-                        <div id="playerForm">
-                            <div class="form-group">
-                                <label for="playerName">Player Name</label>
-                                <input type="text" class="form-control" id="playerName" placeholder="Enter player name">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <ul class="nav nav-tabs card-header-tabs">
+                                <li class="nav-item" onclick="displayPlayersTab()">
+                                    <a class="nav-link" id="addPlayersTab">Add Players</a>
+                                </li>
+                                <li class="nav-item" onclick="displaySettingsTab()">
+                                    <a class="nav-link" id="gameSettingsTab">Game Settings</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-body">
+                            <div id="playerForm">
+                                <div class="form-group">
+                                    <label for="playerName">Player Name</label>
+                                    <input type="text" class="form-control" id="playerName"
+                                        placeholder="Enter player name">
+                                </div>
+                                <div class="text-center">
+                                    <button type="button" class="btn btn-sm btn-danger" onclick="addPlayer()">Add
+                                        Player</button>
+                                </div>
+                                <div id="playerList"></div>
                             </div>
-                            <div class="text-center">
-                                <button type="button" class="btn btn-sm btn-danger" onclick="addPlayer()">Add
-                                    Player</button>
+
+                            <div id="quizSettings">
+                                <label for="category">Category</label>
+                                <select id="category">
+                                    <option value="0">All Categories</option>
+                                    <option value="9">General knowledge</option>
+                                    <option value="10">Books</option>
+                                    <option value="11">Film</option>
+                                    <option value="12">Music</option>
+                                    <option value="13">Musicals and Theatres</option>
+                                    <option value="14">TV</option>
+                                    <option value="15">Video Games</option>
+                                    <option value="16">Board Games</option>
+                                    <option value="17">Science and Nature</option>
+                                    <option value="18">Computers</option>
+                                    <option value="19">Maths</option>
+                                    <option value="20">Mythology</option>
+                                    <option value="21">Sports</option>
+                                    <option value="22">Geography</option>
+                                    <option value="23">History</option>
+                                    <option value="24">Politics</option>
+                                    <option value="25">Art</option>
+                                    <option value="26">Celebrities</option>
+                                    <option value="27">Animals</option>
+                                    <option value="28">Vehicles</option>
+                                    <option value="29">Comics</option>
+                                    <option value="30">Gadgets</option>
+                                    <option value="31">Anime and Manga</option>
+                                    <option value="32">Cartoons and Animations</option>
+                                </select>
+                                <br>
+                                <br>
+
+                                <label for="difficultySlider">Select Difficulty</label>
+                                <input type="range" min="1" max="3" value="1" class="form-range" step="1"
+                                    id="difficultySlider" list="difficulty">
+
+                                <div class="slider-labels">
+                                    <span>Easy</span>
+                                    <span>Medium</span>
+                                    <span>Hard</span>
+                                </div>
                             </div>
                         </div>
-                        <div id="playerList"></div>
-                    </div>
-                    <div class="card-footer">
-                        <div class="d-flex justify-content-center">
-                            <button class="btn btn-success" onclick="playGame()">Play Game</button>
+                        <div class="card-footer">
+                            <div class="d-flex justify-content-center">
+                                <button class="btn btn-success" onclick="playGame()">Play Game</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <footer>
-        <p>Questions from Open Trivia Database</p>
-    </footer>
-    <script src="../Control/getQuestions.js"></script>
-    <script src="../Control/addPlayers.js"></script>
+        <footer>
+            <p>Questions from Open Trivia Database</p>
+        </footer>
+        <script src="../Control/getQuestions.js"></script>
+        <script src="../Control/addPlayers.js"></script>
+        <script src="../Control/settingsSelection.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
