change category and difficulty added

--- a/Dev/View/index.html
+++ b/Dev/View/index.html
@@ -87,6 +87,9 @@
                                     <span>Medium</span>
                                     <span>Hard</span>
                                 </div>
+                                <div>
+                                    <button class="btn btn-success" onclick="quizSettings()">Confirm Settings</button>
+                                </div>
                             </div>
                         </div>
                         <div class="card-footer">
@@ -102,9 +105,10 @@
         <footer>
             <p>Questions from Open Trivia Database</p>
         </footer>
-        <script src="../Control/getQuestions.js"></script>
+        <script src="../Control/playGame.js"></script>
         <script src="../Control/addPlayers.js"></script>
-        <script src="../Control/settingsSelection.js"></script>
+        <script src="../Control/quizNavigation.js"></script>
+        <script src="../Control/quizSettings.js"></script>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
