--- a/Dev/View/quiz.html
+++ b/Dev/View/quiz.html
@@ -45,7 +45,7 @@
     <footer>
         <p>Questions from Open Trivia Database</p>
     </footer>
-    <script src="../Control/getQuestions.js"></script>
+    <script src="../Control/playGame.js"></script>
     <script src="../Control/addPlayers.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
