--- a/Dev/View/quiz.html
+++ b/Dev/View/quiz.html
@@ -8,6 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body onload="setQuiz()">
@@ -18,14 +19,13 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title text-center" id="quizHeader">The quiz to play with friends</h4>
+                        <h4 class="card-title text-center" id="question"></h4>
                     </div>
                     <div class="card-body">
                         <div id="questionBody">
-                            <h5 id="question">question here</h5>
                             <div id="answers"></div>
                             <div id="leaderboard">
                                 <table id="scoreboard">
