--- a/Dev/View/index.html
+++ b/Dev/View/index.html
@@ -39,16 +39,16 @@
                                     <input type="text" class="form-control" id="playerName"
                                         placeholder="Enter player name">
                                 </div>
+                                <br>
                                 <div class="text-center">
-                                    <button type="button" class="btn btn-sm btn-danger" onclick="addPlayer()">Add
-                                        Player</button>
+                                    <button type="button" class="btn btn btn-danger" onclick="addPlayer()">Add Player</button>
                                 </div>
                                 <div id="playerList"></div>
                             </div>
 
                             <div id="quizSettings">
-                                <label for="category">Category</label>
-                                <select id="category">
+                                <label for="category">Select Category</label>
+                                <select id="category" class="form-select">
                                     <option value="0">All Categories</option>
                                     <option value="9">General knowledge</option>
                                     <option value="10">Books</option>
@@ -76,7 +76,6 @@
                                     <option value="32">Cartoons and Animations</option>
                                 </select>
                                 <br>
-                                <br>
 
                                 <label for="difficultySlider">Select Difficulty</label>
                                 <input type="range" min="1" max="3" value="1" class="form-range" step="1"
@@ -87,14 +86,15 @@
                                     <span>Medium</span>
                                     <span>Hard</span>
                                 </div>
+                                <br>
                                 <div>
-                                    <button class="btn btn-success" onclick="quizSettings()">Confirm Settings</button>
+                                    <button class="btn btn-danger" onclick="quizSettings()">Confirm Settings</button>
                                 </div>
                             </div>
                         </div>
                         <div class="card-footer">
                             <div class="d-flex justify-content-center">
-                                <button class="btn btn-success" onclick="playGame()">Play Game</button>
+                                <button class="btn btn-success btn-lg" onclick="playGame()">Play Game!</button>
                             </div>
                         </div>
                     </div>
