--- a/Dev/View/quiz.html
+++ b/Dev/View/quiz.html
@@ -28,11 +28,14 @@
                         <div id="questionBody">
                             <div id="answers"></div>
                             <div id="leaderboard">
-                                <table id="scoreboard">
-                                    <tr>
-                                        <th>Player</th>
-                                        <th>Score</th>
-                                    </tr>
+                                <table id="scoreboard" class="table">
+                                    <thead class="table-success">
+                                        <tr>
+                                            <th>Player</th>
+                                            <th>Score</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
                                 </table>
                             </div>
                         </div>
