--- a/Dev/View/quiz.html
+++ b/Dev/View/quiz.html
@@ -19,7 +19,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <div class="col-md-8 col-sm-8 col-lg-8">
                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title text-center" id="question"></h4>
@@ -47,13 +47,13 @@
 
     <div id="google_translate_element"></div>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
 </script>
 
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
     <footer>
         <p>Questions from Open Trivia Database</p>
