changed some colours for buttons and cards. hopefully looks less boring

--- a/Dev/View/index.html
+++ b/Dev/View/index.html
@@ -41,7 +41,8 @@
                                 </div>
                                 <br>
                                 <div class="text-center">
-                                    <button type="button" class="btn btn btn-danger" onclick="addPlayer()">Add Player</button>
+                                    <button type="button" class="btn btn btn-danger" onclick="addPlayer()">Add
+                                        Player</button>
                                 </div>
                                 <div id="playerList"></div>
                             </div>
@@ -103,17 +104,17 @@
         </div>
         <div id="google_translate_element"></div>
 
-<!-- <script type="text/javascript">
+        <!-- <script type="text/javascript">
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
 </script>
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
-
-        <footer>
-            <p>Questions from Open Trivia Database</p>
-        </footer>
+</div>
+<footer>
+    <p>Questions from Open Trivia Database</p>
+</footer>
         <script src="../Control/playGame.js"></script>
         <script src="../Control/addPlayers.js"></script>
         <script src="../Control/quizNavigation.js"></script>
