--- a/Dev/View/quiz.html
+++ b/Dev/View/quiz.html
@@ -45,19 +45,19 @@
         </div>
     </div>
 
-    <div id="google_translate_element"></div>
+<div id="google_translate_element"></div>
 
 <!-- <script type="text/javascript">
 function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
 </script>
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
-
-    <footer>
-        <p>Questions from Open Trivia Database</p>
-    </footer>
+</div>
+<footer>
+<p>Questions from Open Trivia Database</p>
+</footer>
     <script src="../Control/playGame.js"></script>
     <script src="../Control/addPlayers.js"></script>
 
