name change and colour change

--- a/Dev/View/quiz.html
+++ b/Dev/View/quiz.html
@@ -14,7 +14,7 @@
 <body onload="setQuiz()">
 
     <header>
-        <h1>Big quiz game for quiz enjoyers who like quizzes with friends!</h1>
+        <h1>Quiz Game</h1>
     </header>
 
     <div class="container">
