--- a/Dev/View/index.html
+++ b/Dev/View/index.html
@@ -14,7 +14,7 @@
 <body onload="displayPlayersTab()">
 
     <header>
-        <h1>Quiz Game</h1>
+        <h1 class="header">Quiz Game</h1>
     </header>
 
     <div class="navdiv">
@@ -60,7 +60,7 @@
                                 </div>
                                 <br>
                                 <div class="text-center">
-                                    <button type="button" class="btn btn btn-danger" onclick="addPlayer()">Add
+                                    <button type="button" class="btn addButton" onclick="addPlayer()">Add
                                         Player</button>
                                 </div>
                                 <div id="playerList"></div>
@@ -108,13 +108,13 @@
                                 </div>
                                 <br>
                                 <div>
-                                    <button class="btn btn-danger" onclick="quizSettings()">Confirm Settings</button>
+                                    <button class="btn addButton" onclick="quizSettings()">Confirm Settings</button>
                                 </div>
                             </div>
                         </div>
                         <div class="card-footer">
                             <div class="d-flex justify-content-center">
-                                <button class="btn btn-success btn-lg" onclick="playGame()">Play Game!</button>
+                                <button class="btn btn-lg" id="playGame" onclick="playGame()">Play Game!</button>
                             </div>
                         </div>
                     </div>
