--- a/Dev/View/quiz.html
+++ b/Dev/View/quiz.html
@@ -17,6 +17,25 @@
         <h1>Quiz Game</h1>
     </header>
 
+    <div class="navdiv">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-item active">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="help.html" class="nav-item">Help</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8 col-sm-8 col-lg-8">
