--- a/Dev/View/quiz.html
+++ b/Dev/View/quiz.html
@@ -14,13 +14,11 @@
 <body onload="setQuiz()">
 
     <header>
-        <h1>Quiz Game</h1>
-    </header>
+        <h1 class="header">Quiz Game</h1>
 
-    <div class="navdiv">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -34,7 +32,7 @@
                 </ul>
             </div>
         </nav>
-    </div>
+    </header>
 
     <div class="container">
         <div class="row justify-content-center">
