--- a/Dev/View/style.css
+++ b/Dev/View/style.css
@@ -24,6 +24,7 @@
   font-size: 20px;
   cursor: pointer;
   text-align: center;
+  margin-bottom:-25px;
 }
 
 .block:hover {
@@ -80,6 +81,7 @@ footer {
   padding: 15px;
   margin-top: 15px;
   color: white;
+  width: 100%;
 }
 
 body {
@@ -112,6 +114,12 @@ h1 {
 
 .card {
   border-color: hsl(198, 14%, 15%);
+}
+
+.qAnswer {
+  color: black;
+  font-size: 30px;
+  text-align: center;
 }
 
 /* Nav bar */
