--- a/Dev/View/help.html
+++ b/Dev/View/help.html
@@ -14,7 +14,7 @@
 <body onload="displayHowToPlay()">
 
     <header>
-        <h1 class="header">Quiz Game</h1>
+        <h1 class="header">Knowledge Knockout!</h1>
 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
