--- a/Dev/View/index.html
+++ b/Dev/View/index.html
@@ -34,6 +34,10 @@
         </nav>
     </header>
 
+    <div class="alert" id="confirmSettings">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    </div>
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8 col-sm-8 col-lg-8">
