--- a/Dev/View/style.css
+++ b/Dev/View/style.css
@@ -28,7 +28,7 @@
   font-size: 20px;
   cursor: pointer;
   text-align: center;
-  margin-bottom:-25px;
+  margin-bottom: -25px;
 }
 
 .block:hover {
@@ -82,7 +82,7 @@
 header {
   margin-bottom: 20px;
   padding-top: 20px;
-  padding-bottom:15px;
+  padding-bottom: 15px;
   background-color: hsl(198, 14%, 15%);
   display: flex;
   justify-content: space-between;
@@ -196,7 +196,7 @@ nav {
 /* Alert bar */
 .alert {
   padding: 20px;
-  background-color: #f44336;
+  background-color: rgb(230, 149, 0);
   color: white;
 }
 
